# py_skeleton

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
py_skeleton/: __main__.py  logger.py  service.py
tests/: conftest.py  test_service.py
